# SoulLake

./: .gitignore  .project  README.md  gradle.properties  settings.gradle.kts
SoulLake/gradle/wrapper/: gradle-wrapper.properties
ashlake-flink/: build.gradle.kts
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/: Main.java
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/arrow/: ArrowUtils.java  ArrowWrapper.java
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/sink/: MultiTableSink.java  MultiTableSinkGlobalCommittable.java
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/sink/bucket/: BucketBuilder.java
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/sink/state/: MultiTableSinkCommittable.java
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/sink/writer/: AbstractMultiTableSinkWriter.java  NativeArrowBucketWriter.java  NativeArrowWrapperWriter.java  NativeParquetWriter.java  WriterBucket.java
ashlake-flink/src/main/java/top/mag1cian/ashlake/flink/source/: AshLakeSource.java  AshLakeSplitEnumerator.java  PartitionSplit.java  PendingSplits.java
ashlake-flink/src/test/java/top/mag1cian/ashlake/flink/arrow/: ArrowWrapperTest.java
ashlake-io-java/: build.gradle.kts
ashlake-io-java/src/main/java/top/mag1cian/ashlake/io/: NativeIOBase.java  NativeIOWriter.java
ashlake-io-java/src/main/java/top/mag1cian/ashlake/io/jnr/: JnrLoader.java  LibAshLakeIO.java
ashlake-io-java/src/main/java/top/mag1cian/ashlake/io/mem/: ArrowMemoryUtils.java
ashlake-spark/: build.gradle.kts
ashlake-spark/src/main/scala/com/dmetasoul/lakesoul/meta/: CommitState.scala  MetaUtils.scala
ashlake-spark/src/main/scala/org/apache/spark/sql/lakesoul/: Snapshot.scala
ashlake-spark/src/main/scala/org/apache/spark/sql/lakesoul/sources/: LakeSoulDataSource.scala
common/meta/: DBConfig.java
gradle/: libs.versions.toml
lib/: .project  build.gradle.kts
lib/src/main/scala/org/apache/spark/sql/lakesoul/catalog/: LakeSoulTableV2.scala
lib/src/test/scala/org/example/: LibrarySuite.scala
native-io/: NativeIOBase.java
rust/: Cargo.toml
rust/soullake-io/: Cargo.toml
rust/soullake-io/src/: lib.rs
rust/soullake-io/src/reader/: mod.rs
rust/soullake-metadata/: Cargo.toml
rust/soullake-metadata/src/: lib.rs
soullake-common/src/main/java/com/dmetasoul/lakesoul/meta/: DBConfig.java
soullake-spark/: build.gradle.kts
soullake-spark/src/test/scala/org/example/: LibrarySuite.scala
spark/scala/: LakeSoulTable.scala  LakeSoulTableOperations.scala  Snapshots.scala
spark/scala/meta/: CommitState.scala
sql/: meta_init.sql
