[package]
name = "soullake-io"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
snafu = { workspace = true }
datafusion = { workspace = true }

[lints]
workspace = true
